Initial html to get preference

--- a/Ranker.HTML
+++ b/Ranker.HTML
@@ -11,5 +11,6 @@
             <button id="skipButton" onclick="nextImage()" Skip>
             </button>
             </div>
+        <script>src="saver.js"</script>
     </body>
 <html>
